<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/shapes_menu"
        android:title="@string/shapes_menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/point"
                android:title="@string/point_title" />
            <item
                android:id="@+id/line"
                android:title="@string/line_title" />
            <item
                android:id="@+id/rectangle"
                android:title="@string/rect_title" />
            <item
                android:id="@+id/ellipse"
                android:title="@string/ellipse_title" />
            <item
                android:id="@+id/cube"
                android:title="@string/cube_title" />
            <item
                android:id="@+id/line_with_circles"
                android:title="@string/line_with_circles_title" />
        </menu>
    </item>

</menu>